# ecom_debezium

./: debezium.json  docker-compose.yml  main.py  pyproject.toml
.ropeproject/: autoimport.db
.zed/: debug.json
docs/: notes.md
generator/: generator.py
tests/: test_order_creation.py  test_sm.py
user_activity_state_machine/: action.py  state.py  test_uasm.py  uasm.py
user_workflow_state_machine/: state.py  state_handlers.py  test_sm.py  workflow_sm.py
utils/: __init__.py  database.py  db_writer.py  models.py  utils.py
