[project]
name = "ecom-debezium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocsv>=1.4.0",
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "debugpy>=1.8.17",
    "faker>=37.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
